getAggregatedMetricDataAPI-regularQueries: scale 01
Former-commit-id: 77eadd9cf52bf8b2119ea420672700272118bee7